--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel ./src/html/index.html ./src/html/vue.html",
-    "dev-vue": "parcel ./src/html/vue-single.html",
-    "dev-all": "parcel ./src/html/index.html ./src/html/vue.html ./src/html/vue-single.html",
+    "dev": "parcel ./src/html/index.html ./src/html/vue.html --open",
+    "dev-vue": "parcel ./src/html/vue-single.html --open",
+    "dev-all": "parcel ./src/html/index.html ./src/html/vue.html ./src/html/vue-single.html --open",
     "build": "parcel build ./src/js/index.js -d build && parcel build ./src/js/vue.js -d build && parcel build ./src/js/vue-single.js -d build",
     "build-html": "parcel build ./src/html/index.html -d build && parcel build ./src/html/vue.html -d build && parcel build ./src/html/vue-single.html -d build",
     "build-html-d": "parcel build ./src/html/index.html -d D://test"
@@ -20,7 +20,6 @@
     "babel-core": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.11",
     "node-sass": "^4.8.3",
     "parcel-bundler": "^1.7.1",
     "parcel-plugin-vue": "^1.5.0",
